[metadata]
name = uengine
summary = a micro webframework based on flask and pymongo
home-page = https://github.com/viert/uengine
project_urls =
    Source Code = https://github.com/viert/uengine
author = Pavel Vorobyov
author-email = aquavitale@yandex.ru
license = MIT
python_requires = >=3.6

[options]
packages = find:


[entry_points]
console_scripts =
    uengine = uengine.__main__:main
pbr.config.drivers =
    plain = pbr.cfg.driver:Plain